# CFakeLib

./: .travis.yml  CFakeLib.cpp  CFakeLibUtils.cpp  README.md  meson.build
include/: CFakeLib.h  CFakeLibUtils.h
pkg-config/: cfake.pc
tests/: main.c  meson.build
